minikube/ingress-tls-withCA/bak/ingress.yaml
# NOTE: servicePort is the port of the pod - not of the 'service' created for the pod

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
